NetBSD Problem Report #44512

From www@NetBSD.org  Fri Feb  4 11:59:13 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id B9F8A63B874
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  4 Feb 2011 11:59:12 +0000 (UTC)
Message-Id: <20110204115911.ECD1763B873@www.NetBSD.org>
Date: Fri,  4 Feb 2011 11:59:11 +0000 (UTC)
From: pallegra@gmail.com
Reply-To: pallegra@gmail.com
To: gnats-bugs@NetBSD.org
Subject: ftp-proxy doesn't compile with MKIPFILTER=no
X-Send-Pr-Version: www-1.0

>Number:         44512
>Category:       bin
>Synopsis:       ftp-proxy doesn't compile with MKIPFILTER=no
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 04 12:00:00 +0000 2011
>Closed-Date:    Thu Feb 10 14:05:03 +0000 2011
>Last-Modified:  Thu Feb 10 14:20:02 +0000 2011
>Originator:     Pierre Allegraud
>Release:        CURRENT
>Organization:
>Environment:
>Description:
With MKNPF=yes and MKIPFILTER=no options, /usr/src/dist/pf/usr.sbin/ftp-proxy/ftp-proxy.c doesn't compile.
./dist/pf/usr.sbin/ftp-proxy/filter.h declares npfopts iff MKIPFILTER=yes, but this variable is also used by npf.
>How-To-Repeat:
Add MKIPFILTER=no into /etc/mk.conf and rebuild ftp-proxy.
>Fix:
This quick n dirty patch fixes this problem :

Index: ./dist/pf/usr.sbin/ftp-proxy/filter.h
===================================================================
RCS file: /cvsroot/src/dist/pf/usr.sbin/ftp-proxy/filter.h,v
retrieving revision 1.3
diff -u -r1.3 filter.h
--- ./dist/pf/usr.sbin/ftp-proxy/filter.h	2 Feb 2011 02:20:26 -0000	1.3
+++ ./dist/pf/usr.sbin/ftp-proxy/filter.h	4 Feb 2011 11:57:24 -0000
@@ -43,6 +43,9 @@

 #if defined(__NetBSD__) && defined(WITH_IPF)
 extern const ftp_proxy_ops_t	ipf_fprx_ops;
+#endif
+
+#if defined(__NetBSD__) && (defined(WITH_NPF) || defined(WITH_IPF))
 extern char *			npfopts;
 #endif


>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Thu, 10 Feb 2011 14:05:03 +0000
State-Changed-Why:
Fixed, thanks.


From: "Mindaugas Rasiukevicius" <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44512 CVS commit: src
Date: Thu, 10 Feb 2011 14:04:30 +0000

 Module Name:	src
 Committed By:	rmind
 Date:		Thu Feb 10 14:04:30 UTC 2011

 Modified Files:
 	src/dist/pf/usr.sbin/ftp-proxy: filter.h
 	src/distrib/sets/lists/comp: mi
 	src/distrib/sets/lists/man: mi

 Log Message:
 - Fix man pages list for MKNPF=no case.  Based on a patch from Scott Ellis.
 - Fix build with MKNPF=yes and MKIPFILTER=no as well; close PR/44512.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/dist/pf/usr.sbin/ftp-proxy/filter.h
 cvs rdiff -u -r1.1584 -r1.1585 src/distrib/sets/lists/comp/mi
 cvs rdiff -u -r1.1286 -r1.1287 src/distrib/sets/lists/man/mi

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.