- Fix man pages list for MKNPF=no case.  Based on a patch from Scott Ellis. - Fix build with MKNPF=yes and MKIPFILTER=no as well; close PR/44512.